--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "sinon": "^6.1.4",
